# GUNTAM

./: README.md  pyproject.toml
.github/workflows/: CI.yml
GUNTAM/IO/: DataLoader.py  PrepareTensor.py  PreprocessingConfig.py  Read_ACTS_Csv.py
GUNTAM/Seed/: Config.py  Monitoring.py  MonitoringPlot.py  Reconstruction.py  SeedLoss.py  SeedTransformer.py  Train.py
GUNTAM/Transformer/: BinTensor.py  Embeding.py  Transformer.py  Utils.py
tests/data/: event000000000-measurement-simhit-map.csv  event000000000-particles_selected.csv  event000000001-measurement-simhit-map.csv  event000000001-particles_selected.csv  event000000002-measurement-simhit-map.csv  event000000002-particles_selected.csv  event000000003-measurement-simhit-map.csv  event000000003-particles_selected.csv  event000000004-measurement-simhit-map.csv  event000000004-particles_selected.csv
tests/test_integration/: test_integration_seed.py
tests/tests_IO/: test_dataloader.py  test_preparetensor.py  test_read_acts_csv.py
tests/tests_seed/: test_config.py  test_loss.py  test_monitoring.py  test_reconstruction.py  test_seedtransformer.py
tests/tests_transformer/: test_embeding.py  test_transformer.py  test_utils.py
