[project]
name = "GUNTAM"
version = "0.1.0"
description = "Transformer network implementation to be used as a seeding for charged particle tracking. Made to be used with data from the ACTS project."
authors = [
    {name = "Corentin Allaire", email = "corentin.allaire@cern.ch"},
]
dependencies = ["torch>=2.2.2", "numpy>=2.3.5", "pandas>=2.3.3", "black>=25.11.0", "pytest>=9.0.1", "mypy>=1.18.2", "tensorboard>=2.20.0", "matplotlib>=3.10.7", "flake8>=7.3.0", "flake8-pyproject>=1.2.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MPL-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.flake8]
max-line-length = 120
ignore = ["W293"]
exclude = [".venv", "__pycache__"]
